# birtrashclient

./: .gitignore  README.md  pyproject.toml  test_integration.py
.github/workflows/: ci.yml  publish-prerelease.yml  publish.yml  workflow.yml
birtrashclient/: __init__.py  client.py
