[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "birtrashclient"
version = "0.1.2b1"
description = "Async client library for the BIR Trash Collection API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Topic :: Home Automation",
]

[project.urls]
"Homepage" = "https://github.com/eirikgrindevoll/birtrashclient"
"Bug Tracker" = "https://github.com/eirikgrindevoll/birtrashclient/issues"
